[package]
name = "fasthello"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "turbo"
path = "turbo.rs"

[[bin]]
name = "speedy"
path = "speedy.rs"

[[bin]]
name = "fast"
path = "fast.rs"

[[bin]]
name = "slow"
path = "slow.rs"

[[bin]]
name = "glacial"
path = "glacial.rs"

[[bin]]
name = "lightning"
path = "lightning.rs"

[[bin]]
name = "ludicrous"
path = "ludicrous.rs"

[[bin]]
name = "serious"
path = "serious.rs"

[[bin]]
name = "mappy"
path = "mappy.rs"

[dependencies]
itoa = "0.4"
memmap = "0.7"
nix = "0.15"
libc = "0.2"